Fix z-index of esper-header.

--- a/src/stylesheets/components/_esper.scss
+++ b/src/stylesheets/components/_esper.scss
@@ -12,6 +12,11 @@
   position: relative;
   overflow: hidden;
 
+  .esper-header {
+    position: relative;
+    z-index: $zindex-esper-header;
+  }
+
   .toolbar {
     box-sizing: content-box;
     padding-top: 0;
